--- a/Project/总结/经验总结.md
+++ b/Project/总结/经验总结.md
@@ -1,4 +1,4 @@
-# experience
+# 一、experience
 
 # 🎈🎈经验总结🎈🎈
 
@@ -1072,7 +1072,7 @@ public class DoubleLinkedListDemo {
 
 
 
-# 高级\_集合框架
+# 🎈🎈高级\_集合框架
 
 ## 1.1 map和set
 
@@ -1420,7 +1420,7 @@ public class QuickSort {
 
 
 
-# 高级\_异常
+# 🎈🎈高级\_异常
 
 ## 1、集合的foreach问题
 
@@ -1721,7 +1721,7 @@ com.think.lv2.exception.NetworkRuntimeException: 网络链接错误
 
 
 
-# 高级\_IO
+# 🎈🎈高级\_IO
 
 ## 1 测试File
 
@@ -1748,7 +1748,7 @@ true
 
 - 相对路径：相对与某个基准目录的路径。包含Web的相对路径（HTML中的相对目录），例如：在Servlet中，"/"代表Web应用的跟目录。和物理路径的相对表示。例如："./" 代表当前目录,"../"代表上级目录。这种类似的表示，也是属于相对路径。
 
-​	
+	​	
 
 ## 3 怎么快速地在idea中找绝对路径和相对路径
 
@@ -2050,7 +2050,7 @@ class Person implements Serializable {
 
 
 
-# 网络编程
+# 🎈🎈网络编程
 
 ## 1、IP、Port、双工等定义
 
@@ -2270,7 +2270,7 @@ public class Sender {
 
 
 
-# 多线程
+# 🎈🎈多线程
 
 ## 1、线程、进程概念
 
@@ -2913,13 +2913,20 @@ public class Demo {
 - 自己写的，不知道合不合理
 
 ~~~java
+package bakeryquestion;
+
 public class Test {
     public static void main(String[] args) {
         Bakery bakery = new Bakery();
         Thread t = new Thread(bakery);
-        Thread t2 = new Thread(new Consumer(bakery));
+        Thread t2 = new Thread(new Consumer(bakery,"Jack"));
+        Thread t3 = new Thread(new Consumer(bakery,"Mike"));
+        Thread t4 = new Thread(new Consumer(bakery,"Mary"));
         t.start();
         t2.start();
+        t3.start();
+        t4.start();
+
 
     }
 
@@ -2930,9 +2937,9 @@ public class Test {
         public void run() {
             System.out.println("Bakery线程启动");
             while (true) {
-                //500毫秒抢一次线程
+                //面包店100毫秒抢一次线程，生产面包
                 try {
-                    Thread.sleep(500);
+                    Thread.sleep(100);
                 } catch (InterruptedException e) {
                     throw new RuntimeException(e);
                 }
@@ -2967,14 +2974,15 @@ public class Test {
 
     private static class Consumer implements Runnable {
         private Bakery bakery;
+        String name;
 
         @Override
         public void run() {
             System.out.println("Consumer线程启动");
             while (true) {
-                //1200毫秒抢一次线程
+                //顾客500毫秒抢一次线程，消费面包
                 try {
-                    Thread.sleep(1200);
+                    Thread.sleep(500);
 
                 } catch (InterruptedException e) {
                     throw new RuntimeException(e);
@@ -2982,11 +2990,11 @@ public class Test {
 
                 synchronized (bakery) {
                     if (bakery.count > 0) {
-                        System.out.println("顾客买了一个面包");
+                        System.out.println("顾客"+name+"买了一个面包，还剩");
                         bakery.count--;
                         bakery.notifyAll();// 消费完了一个面包，相当于减少一个信号量，告诉生产者要生产了
                     } else {
-                        System.out.println("面包不够");
+                        System.out.println("顾客"+name+"想买面包，面包不够");
                         try {
                             bakery.wait();  // 面包不够，告诉生产者要生产面包了
                         } catch (InterruptedException e) {
@@ -3001,11 +3009,253 @@ public class Test {
 
         }
 
-        public Consumer(Bakery bakery) {
+        public Consumer(Bakery bakery, String name) {
             this.bakery = bakery;
+            this.name = name;
         }
     }
 
+
+}
+
+~~~
+
+## 6、TimeUtil类
+
+- ```java
+  TimeUnit.MILLISECONDS.sleep(time); // 代码易读，语义更清晰
+  ```
+
+## 7、多线程案例一:wait和notifyAll的使用
+
+- 问题：现在有A1、A2、A3三个线程（分别打0-10、11-20、21-30），怎样保证A2在A1执行完后执行，A3在A2执行完后执行？
+
+```java
+public class Demo {
+    // 应用程序是由1个或多个进程组成的（它的内存空间是独占的），而一个进程是由1个或多个线程组成的（它的内存有一部分是共享的，还有一部分是独占的）
+    // JVM通过Runnable创建的线程，其实更加像是一个任务（逻辑上的概念，而非物理上的）
+    // 如果程序中的总任务数大于处理器的个数，那么CPU的调度器将会让他们轮番来使用处理器执行逻辑
+
+    public static void main(String[] args) throws InterruptedException {
+        Resource res = new Resource(new ArrayList<>(), 1);
+        Thread t1 = new Thread(new Task(res, 1));
+        Thread t2 = new Thread(new Task(res, 2));
+        Thread t3 = new Thread(new Task(res, 3));
+        t3.start();
+        t2.start();
+        RandomUtils.longSleep(1000, 2000);
+        t1.start();
+
+        t1.join();
+        t2.join();
+        t3.join();
+
+        System.out.println(res.getList());
+    }
+    private static class Resource {
+        List<Integer> list;
+        /**
+         * 现在到了第几个
+         */
+        int current;
+
+        public Resource(List<Integer> list, int current) {
+            this.list = list;
+            this.current = current;
+        }
+
+        public List<Integer> getList() {
+            return list;
+        }
+
+        public void setList(List<Integer> list) {
+            this.list = list;
+        }
+
+        public int getCurrent() {
+            return current;
+        }
+        public void setCurrent(int current) {
+            this.current = current;
+        }
+    }
+    private static class Task implements Runnable {
+        final Resource res;
+        /**
+         * 当前线程排在第几个
+         */
+        int order;
+
+        public Task(Resource res, int order) {
+            this.res = res;
+            this.order = order;
+        }
+
+        @Override
+        public void run() {
+            // 判断是否轮到当前线程来进行填充
+            while (true) {
+                try {
+                    synchronized (res) {
+                        if (myTurn()) { // min = ? max =? (10x - 9) 10x
+                            fill(generateNumbers(10 * order - 9, 10 * order));
+                            res.setCurrent(order + 1);
+                            // 都有让权一说，根据语境来判断wait or  notifyAll
+                            res.notifyAll();
+                        } else {
+                            // N not fill() 放弃
+                            res.wait();
+                        }
+                    }
+                    if (res.getCurrent() >= 4) break;
+                } catch (InterruptedException e) {
+                    e.printStackTrace();
+                }
+            }
+
+        }
+        private boolean myTurn() {
+            return (order == res.getCurrent());
+        }
+        /**
+         * 把arr中的元素依次添加到list容器的末尾
+         *
+         * @param arr 需要被填充的数组
+         */
+        public void fill(int[] arr) {
+            for (int j : arr)
+                res.getList().add(j);
+        }
+        /**
+         * 生成一个从min~max之间的整数数组
+         *
+         * @param min 最小值（包含）
+         * @param max 最大值（包含）
+         * @return 区间数组
+         */
+        public int[] generateNumbers(int min, int max) {
+            int[] arr = new int[max - min + 1];
+            for (int i = min; i < max + 1; i++)
+                arr[i - min] = i;
+
+            return arr;
+        }
+
+    }
+}
+```
+
+## 8、线程池的创建
+
+### 8.1 固定数量线程池
+
+~~~java
+ public static void main(String[] args) {
+        // 创建一个有固定线程数量的线程池 N-1 模式 个别组件会用N + 1
+        // 非常适合保守的来限定对于服务器CPU资源的使用
+        ExecutorService pool = Executors.newFixedThreadPool(Runtime.getRuntime().availableProcessors() - 1);
+        // 请考虑如下这种情况：前面3个任务的执行时间非常长，而后面提交的2个任务会有一个等待期
+        for (int i = 0; i < 100; i++) {
+            pool.submit(() -> { // 开发人员不需要自己来创建线程对象，而是把关注点放在run，也就是具体的业务逻辑
+                RandomUtils.longSleep(1000, 5000);
+                System.out.println(Thread.currentThread().getName());
+            });
+        }
+        pool.shutdown(); // 类似于各种join，即是会等到所有提交的任务执行完毕以后，再关闭pool
+        // pool.shutdownNow();
+        // shutdown以后，不可以再提交新的任务了
+    }
+~~~
+
+
+
+### 8.2 懒汉模式线程池
+
+- 懒汉
+  一开始，pool的size为0，随着提交任务的增多，它会不断创建新的线程实例，随着时间的推进，有的任务很快就执行完了，线程对象会有部分闲置，因此它们会被pool销毁(回收)，实现pool的size出现弹性增长和收缩
+- 适用于提交请求的频率不是特别快，也不是特别多的场景
+
+```java
+public class Main {
+    public static void main(String[] args) {
+        ExecutorService pool = Executors.newCachedThreadPool();      
+        for (int i = 0; i < 100; i++) {
+            pool.submit(() -> { 
+                RandomUtils.longSleep(1000, 5000);
+                System.out.println(Thread.currentThread().getName());
+            });
+        }
+        pool.shutdown(); // 类似于各种join，即是会等到所有提交的任务执行完毕以后，再关闭pool
+        // pool.shutdownNow();
+
+        // shutdown以后，不可以再提交新的任务了
+    }
+}
+```
+
+## 9、schedule定时任务
+
+### 9.1 scheduleAtFixedRate
+
+- scheduleAtFixedRate:保障2个任务的开始时间间隔为1s，但是如果有一个任务的执行时间超出1s，那么下一个任务的开始时间将会延迟到上一个任务结束。
+- 参数
+  - 参数1表示Runable，重写方法
+  - 参数2表示第一个开始等待时间
+  - 参数3表示2个任务的开始时间间隔
+  - 参数4表示时间单位
+
+```java
+public class ScheduleMain {
+    // 定时任务
+    public static void main(String[] args) {
+        int poolSize = Runtime.getRuntime().availableProcessors() - 1;
+        ScheduledExecutorService pool = Executors.newScheduledThreadPool(poolSize);
+
+        // pool.schedule(
+        //         () -> System.out.println(Thread.currentThread().getName()),
+        //         3, // 表示提交任务以后，隔多久才执行
+        //         TimeUnit.SECONDS
+        // );
+        // 在delay时间过后，按照period的频率执行已经提交的任务
+        // 保障上一个任务的开始与下一个任务的开始之间的间隔为1s
+        pool.scheduleAtFixedRate(
+                () -> {
+                    System.out.println(">>>" + Thread.currentThread().getName());
+                    RandomUtils.longSleep(3000, 5000);
+                    System.out.println("<<<" + Thread.currentThread().getName());
+                }, // 任务并非是马上提交
+                3,
+                6,
+                TimeUnit.SECONDS
+        );
+
+       
+```
+
+### 9.2 scheduleWithFixedDelay
+
+- scheduleWithFixedDelay: 严格保障上一个任务结束和下一个任务开始之间的间隔一定是1s
+- 参数
+  - 参数1表示第一个参数表示Runable，重写方法
+  - 参数2表示第一个开始等待时间
+  - 参数3表示上一个任务结束和下一个任务开始之间的间隔
+  - 参数4表示时间单位
+
+~~~java
+public static void main(String[] args) {
+				pool.scheduleWithFixedDelay(() -> {
+                    System.out.println(">>>" + Thread.currentThread().getName());
+                    RandomUtils.longSleep(3000, 5000);
+                    System.out.println("<<<" + Thread.currentThread().getName());
+                }, // 任务并非是马上提交
+                3,
+                1,
+                TimeUnit.SECONDS);
+
+        RandomUtils.longSleep(60000);
+        pool.shutdown();
+
+    }
 
 }
 ~~~
@@ -3014,7 +3264,291 @@ public class Test {
 
 
 
+## 10、集合用法
 
+- int[] 长度固定，类型限定的
+
+- List
+
+  ArrayList 线程不安全，因为它的修改方法并没有“同步化”，同步化就是使用锁的机制保障对应的逻辑“原子化”，这些被原子化的逻辑是连贯执行的
+  也就是说一个线程在执行这些代码片段的时候，其它线程都阻塞在外面，等待它们全部完成，才能进来执行
+
+  CopyOnWriteArrayList
+
+- Map
+
+​       HashMap 不重复，需要根据某一个别名、标识找到某一个
+
+​       ConcurrentHashMap
+
+- Set
+
+​       HashSet : 不重复，只需要盛放，不需要找某一个
+​       ConcurrentSkipListSet
+
+## 11、Future、Callable
+
+### 11.1 Future和Callable
+
+- `Callable`接口来提交有返回值的任务，得到`Feature`作为结果
+
+- pool.submit用的是Callable而不是Runable，因为Runable没有返回值
+- **future.get()等方法是阻塞性方法**
+
+~~~java
+ public static void main(String[] args) throws ExecutionException, InterruptedException {
+        ExecutorService pool = null;
+        try {
+            pool = Executors.newFixedThreadPool(3);
+            // submit方法：提交一个有返回值的任务，它会立即返回一个包装了一个在未来某一个时间点会得到结果的对象
+            // future相当于我们以后获取结果的一个句柄
+            Future<String> future = pool.submit(
+                    () -> {
+                        RandomUtils.longSleep(3000, 5000);
+                        return RandomUtils.randomString(); // x
+                    }
+            );
+            System.out.println(0);
+
+            String msg = future.get();// 会得到x处所return的值，这个get方法是阻塞性，阻塞的时间取决于任务实际执行的时间
+
+            System.out.println(msg);
+        } finally {
+            if (pool != null)
+                pool.shutdown();
+        }
+
+        // pool.submit(new MyCall());
+    }
+~~~
+
+
+
+
+
+### 11.2 案例
+
+- 问题
+
+  开辟多个线程，在线程中随机休眠一段时间，然后产生一个随机数，最后等所有线程都生成好结果
+  1、进行比较，看谁生成的数字最大
+  2、把所有的数字进行从小打到的顺序，排序输出（附加输出每一个随机数生成的时间）
+
+
+```java
+ public static void main(String[] args) throws ExecutionException, InterruptedException {
+        ExecutorService pool = Executors.newFixedThreadPool(3);
+     
+        // 创建一个集合，把所有的任务提交结果都搜集起来
+        List<Future<Info>> list = new ArrayList<>();
+        for (int i = 0; i < 10; i++) {
+            Future<Info> future = pool.submit(() -> {
+                long t1 = System.currentTimeMillis();
+                RandomUtils.longSleep(3000, 7000);
+                int num = RandomUtils.randomNumber(1000);
+                long t2 = System.currentTimeMillis();
+
+                return new Info(num, (t2 - t1));
+            });
+            list.add(future);	//这里会阻塞
+        }
+        // 1、如何得到所有的运行结果
+        List<Info> infos = new ArrayList<>();
+        for (Future<Info> f : list) {
+            Info info = f.get(); // 于此同时，任务不管你是否get，它都会按照既定的节奏运行
+            infos.add(info);
+        }
+        // 2、根据num排序
+        // if(o1.getRandomNumber()> o2.getRandomNumber()) return 1;
+        // if(o1.getRandomNumber()< o2.getRandomNumber()) return -1;
+        // return 0;
+        Collections.sort(infos, (o1, o2) -> Integer.compare(o1.getRandomNumber(), o2.getRandomNumber()));
+        System.out.println(infos);
+        pool.shutdown();//等待运行完
+    }
+
+
+    private static class Info {
+        int randomNumber; // 表示生成的随机数
+        long duration; // 耗费的时间
+        @Override
+        public String toString() {
+            return "Info{" +
+                    "randomNumber=" + randomNumber +
+                    ", duration=" + duration +
+                    '}';
+        }
+        public int getRandomNumber() {
+            return randomNumber;
+        }
+
+        public void setRandomNumber(int randomNumber) {
+            this.randomNumber = randomNumber;
+        }
+
+        public long getDuration() {
+            return duration;
+        }
+
+        public void setDuration(long duration) {
+            this.duration = duration;
+        }
+
+        public Info(int randomNumber, long duration) {
+            this.randomNumber = randomNumber;
+            this.duration = duration;
+        }
+    }
+}
+```
+
+
+
+
+
+## 12、异步线程
+
+### 12.1 CompletableFuture.runAsync
+
+#### 12.1.1 以异步的方式提交一个没有返回值的任务
+
+```java
+CompletableFuture.runAsync(() -> {
+    RandomUtils.longSleep(3000, 5000);
+    System.out.println(RandomUtils.randomString());
+});
+System.out.println("提交任务以后主线程后续的逻辑");
+```
+
+#### 12.1.2 按照线程执行顺序实现
+
+```java
+List<String> list = new ArrayList<>();
+CompletableFuture<Void> future1 = CompletableFuture.runAsync(() -> {
+    System.out.println("start1");
+    list.add("A");
+    System.out.println("end1");
+});
+System.out.println("任务1提交完毕");
+CompletableFuture<Void> future2 = future1.thenRunAsync(() -> {
+    System.out.println("start2");
+    list.add("B");
+    System.out.println("end2");
+});
+System.out.println("任务2提交完毕");
+future2.thenRunAsync(() -> {
+    System.out.println("start3");
+    list.add("C");
+    System.out.println("end3");
+});
+System.out.println("任务3提交完毕");
+```
+
+#### 12.1.3 严格保障任务一结束后才能开始任务二
+
+```java
+CompletableFuture.runAsync(() -> list.add("a"))
+        .thenRunAsync(() -> list.add("b"))
+        .thenRunAsync(() -> list.add("c"));
+
+RandomUtils.longSleep(200);
+System.out.println(list);
+```
+
+#### 12.1.4 无返回值的多任务并行
+
+
+```
+public static void test2() { // 无返回值的多任务并行
+    // 并行的提交多个有可能耗费时间的任务
+    // 最终在所有的任务完成之后，再执行后续的指定逻辑
+
+    CompletableFuture<Void> f1 = CompletableFuture.runAsync(() -> {
+        RandomUtils.longSleep(3000, 5000);
+        System.out.println(RandomUtils.randomString());
+    });
+    CompletableFuture<Void> f2 = CompletableFuture.runAsync(() -> {
+        RandomUtils.longSleep(3000, 5000);
+        System.out.println(RandomUtils.randomString());
+    });
+    CompletableFuture<Void> f3 = CompletableFuture.runAsync(() -> {
+        RandomUtils.longSleep(3000, 5000);
+        System.out.println(RandomUtils.randomString());
+    });
+
+    CompletableFuture<Void> all = CompletableFuture.allOf(f1, f2, f3);
+    all.thenRun(() -> {
+        System.out.println("最后运行的");
+    });
+
+
+    RandomUtils.longSleep(5000);
+}
+```
+
+
+
+### 12.2 CompletableFuture.supplyAsync
+
+#### 12.2.1 以异步的方式提交一个有返回值的任务
+
+```java
+CompletableFuture<String> future = CompletableFuture.supplyAsync(() -> {
+    RandomUtils.longSleep(3000, 5000);
+    return RandomUtils.randomString();
+});
+System.out.println("提交任务以后主线程后续的逻辑");
+String msg = future.get();
+System.out.println(msg);
+```
+
+#### 12.2.2 有返回值的多任务并行
+
+~~~java
+  private static final Supplier<Integer> supplier = () -> {
+        RandomUtils.longSleep(3000, 5000);
+        int num = RandomUtils.randomNumber(100);
+        System.out.println(num);
+        return num;
+    };
+public static void test3() { // 有返回值的多任务并行
+        CompletableFuture<Integer> f1 = CompletableFuture.supplyAsync(supplier);
+        CompletableFuture<Integer> f2 = CompletableFuture.supplyAsync(supplier);
+        CompletableFuture<Integer> f3 = CompletableFuture.supplyAsync(supplier);
+
+        CompletableFuture<Void> all = CompletableFuture.allOf(f1, f2, f3);
+        all.thenRun(() -> {
+            try {
+                System.out.println(f1.get() + f2.get() + f3.get());
+            } catch (InterruptedException | ExecutionException e) {
+                throw new RuntimeException(e);
+            }
+            // System.out.println("最后运行的");
+        });
+
+        RandomUtils.longSleep(5000);
+    }
+~~~
+
+#### 12.2.3 超时不阻塞
+
+~~~java
+ private static void test4() {
+        CompletableFuture<Integer> future = CompletableFuture.supplyAsync(() -> {
+            RandomUtils.longSleep(5000);
+            return RandomUtils.randomNumber(100);
+        });
+        System.out.println("任务提交完毕");
+        Integer num = null;
+        try {
+            num = future.get(3, TimeUnit.SECONDS);
+        } catch (Exception e) {
+            // 编写补偿逻辑
+            // 如果超时了，用户没必要继续等待，因为有可能确实没票了，应当立即告诉用户结果
+        }
+        System.out.println(num);
+    }
+~~~
 
 
 
@@ -3032,7 +3566,7 @@ public class Test {
 
 - 定义：类是关于一系列相似对象的概括描述，描述它们共有的状态、行为，通过这种共性的定义，我们可以重构出许许多多类似的对象。
 
-​		而对象，即是根据上述类的定义，“克隆”产生的相关实例，这些实例往往在某些属性或行为上是类似但有细节不同的，比如都有姓名，但具体的名字不同。
+			而对象，即是根据上述类的定义，“克隆”产生的相关实例，这些实例往往在某些属性或行为上是类似但有细节不同的，比如都有姓名，但具体的名字不同。
 
 - 组成类大体包含两种要素，我们统称为成员：
   - 成员变量：体现为属性、状态、数据
