--- a/Project/总结/经验总结.md
+++ b/Project/总结/经验总结.md
@@ -3147,7 +3147,7 @@ public class Demo {
 
 ## 8、线程池的创建
 
-### 8.1 固定数量线程池
+### 8.1 固定数量线程池FixedThreadPool
 
 ~~~java
  public static void main(String[] args) {
@@ -3169,7 +3169,7 @@ public class Demo {
 
 
 
-### 8.2 懒汉模式线程池
+### 8.2 懒汉模式线程池CachedThreadPool
 
 - 懒汉
   一开始，pool的size为0，随着提交任务的增多，它会不断创建新的线程实例，随着时间的推进，有的任务很快就执行完了，线程对象会有部分闲置，因此它们会被pool销毁(回收)，实现pool的size出现弹性增长和收缩
@@ -3549,6 +3549,254 @@ public static void test3() { // 有返回值的多任务并行
         System.out.println(num);
     }
 ~~~
+
+
+
+# 🎈🎈JDK新特性
+
+## 1、jdk中函数式接口家族
+
+### 1.1 Function、Consumer、Supplier等
+
+```java
+Function 入参-1 返回值-1   
+BiFunction 入参-2 返回值-1
+
+Consumer 消费者 入参-1
+BiConsumer 入参-2
+
+Supplier 提供者 返回值-1
+
+Predicate 断言 入参-1 返回值-布尔类型
+```
+
+### 1.2 使用Supplier和Consumer接口对集合排序
+
+- Supplier接口用于返回生成User类的集合
+
+```java
+private static final Supplier<List<User>> s0 = () -> {
+    List<User> list = new ArrayList<>();
+    for (int i = 0; i < 7; i++)
+        list.add(new User(RandomUtils.randomString(), RandomUtils.randomNumber(100)));
+    return list;
+};
+```
+
+- Consumer接口用于接受集合进行排序
+
+
+```java
+private static final Consumer<List<User>> c0 = (users) -> {
+      Collections.sort(users, Comparator.comparing(User::getName));
+      System.out.println(users);
+  };
+```
+
+- testSupplierAndConsumer方法用于接收Supplier传回的集合，并将其传给Consumer，在main函数里调用此方法后得到排好序后的集合列表；
+
+```java
+public static void testSupplierAndConsumer(Consumer<List<User>> c, Supplier<List<User>> s) {
+      List<User> users = s.get();
+      c.accept(users);
+  }
+```
+
+
+
+## 2、方法引用( :: )
+
+  ```java
+  private static List<User> createUsers() {
+      List<User> list = new ArrayList<>();
+      for (int i = 0; i < 7; i++)
+          list.add(new User(RandomUtils.randomString(), RandomUtils.randomNumber(100)));
+      return list;
+  }
+  private static void printUsers(List<User> users) {
+      Collections.sort(users, Comparator.comparing(User::getName));
+      System.out.println(users);
+  }
+   public static void testSupplierAndConsumer(Consumer<List<User>> c, Supplier<List<User>> s) {
+          List<User> users = s.get();
+          c.accept(users);
+  }
+    public static void main(String[] args) {
+          testSupplierAndConsumer(FunctionDemo::printUsers, FunctionDemo::createUsers);
+  }
+  
+  ```
+
+
+
+## 3、数组转换成流
+
+- 使用整数流遍历数组
+
+```java
+public static void main(String[] args) {
+    // Function
+    Function<Integer, int[]> fn = (size) -> {
+        int[] arr = new int[size];
+        for (int i = 0; i < size; i++) {
+            arr[i] = RandomUtils.randomNumber(100);
+        }
+        return arr;
+    };
+    int[] arr = fn.apply(20);
+
+    // 整数流的创建
+    IntStream stream = Arrays.stream(arr);
+    stream.forEach(System.out::println);
+
+    System.out.println("------------------------------------------");
+    // 经过上述的逻辑，指针已经指向了数据流的末尾了
+    stream = Arrays.stream(arr);
+    // 像是把整个数组，变成了一股由各个元素组成的水流
+    stream
+            .filter((item) -> item % 2 == 0) // 使用断言进行过滤
+            // .limit(5) // 限定最后结果为5个
+            .forEach(System.out::println);
+}
+```
+
+
+
+## 4、集合转换成流
+
+- 写一个方法用来生成20个长度的User类集合
+
+```java
+Function<Integer, List<User>> fn = (size) -> {
+      List<User> users = new ArrayList<>();
+      for (int i = 0; i < size; i++) {
+          users.add(new User(RandomUtils.randomString(), RandomUtils.randomNumber(100)));
+      }
+      return users;
+  };
+  
+  List<User> users = fn.apply(20);
+```
+
+### 4.1 peek+filter+foreach
+
+
+- stream流方法使用：对集合的操作
+
+```java
+  （1）users.stream()
+          // 在此处开了一个小窗口，让你可以在不修改数据的情况下去窥探里面的每一个元素的内容
+          // 一般用于开发人员调试逻辑
+          .peek(u -> System.out.println(u.getAge()))
+          .filter(u -> u.getAge() > 18)
+          .forEach(System.out::println);
+  
+  （2）users.stream()
+                  // .map( user -> user.getName() )
+                  // .map(User::getName)
+                  // 一旦使用map进行了类型转换，那么在这个流的后面，就只剩下被转换的内容了
+                  // .mapToInt(User::getAge)
+                  .sorted(Comparator.comparing(User::getName))
+                  .forEach(System.out::println);
+  
+```
+
+
+
+### 4.2 filter+sorted/map + collect
+
+- 收集集合操作：
+
+```java
+  // 重新收集符合条件的一个新集合
+  /**
+         收集用户类链表
+  */
+  List<User> userList = users.stream()
+          .filter(user -> user.getAge() >= 18)
+          .sorted(Comparator.comparing(User::getName))
+          .collect(Collectors.toList());
+  /**
+         收集姓名链表
+  */
+  List<String> nameList = users.stream()
+          .map(User::getName)
+          .collect(Collectors.toList());
+```
+
+
+
+### 4.3 anyMatch、max
+
+- 断言匹配
+
+```java
+  // 该流中只要有一个匹配断言，就为true
+boolean flag = users.stream().anyMatch(user -> user.getAge() >= 18);//noneMatch、AllMatch
+  
+  users.stream().findFirst();// 找到第一个
+  users.stream().findAny(); // 找到任何一个
+  
+  Optional<User> opt = users.stream().max(Comparator.comparing(User::getAge));
+  
+  if(opt.isPresent()) { // 找到了符合条件的
+      User user = opt.get(); // 去获取它
+      System.out.println(user);
+  }
+```
+
+### 4.4 分组案例(groupingBy)
+
+```java
+private static void testGroup() {
+      Function<Integer, List<User>> fn = (size) -> {
+          List<User> users = new ArrayList<>();
+          for (int i = 0; i < size; i++) {
+              users.add(new User(RandomUtils.randomString(), RandomUtils.randomNumber(100), RandomUtils.randomNumber(4)));
+          }
+          return users;
+      };
+  
+      List<User> users = fn.apply(30);
+  
+      // 根据班级来分组，要求得到3个独立的集合或者数组
+      // Map<Boolean, List<User>> collect = users.stream().collect(Collectors.partitioningBy(user -> user.getAge() >= 18));
+      // Set<Map.Entry<Boolean, List<User>>> entries = collect.entrySet();
+      // for (Map.Entry<Boolean, List<User>> entry : entries) {
+      //     System.out.println(entry.getKey() + ":" + entry.getValue());
+      // }
+      Map<Integer, List<User>> collect = users.stream()
+              .collect(Collectors.groupingBy(User::getClassNo));
+      // 根据2个甚至更多个字段来分组（这些字段的值都一样，认为是一组的）
+      // users.stream().collect(Collectors.groupingBy( user -> user.getA() + user.getB()));
+  
+      Set<Map.Entry<Integer, List<User>>> entries = collect.entrySet();
+  
+      for (Map.Entry<Integer, List<User>> entry : entries) {
+          System.out.println(entry.getKey() + ":" + entry.getValue());
+      }
+  }
+```
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
