--- a/Project/总结/经验总结.md
+++ b/Project/总结/经验总结.md
@@ -2,7 +2,27 @@
 
 # 🎈🎈经验总结🎈🎈
 
-## 1、子类和父类之间构造方法
+## 1、类与对象
+
+- 类是对事务普遍状态和行为的抽象
+- 对象是对抽象结果的具体表现的一个实例
+- 类可以当成一个模版，创建出很多属性和行为上有差别的实例
+
+
+
+## 2、封装
+
+封装就是把近似的内容集成在一起，对外提供服务和数据
+
+
+
+## 3、继承
+
+继承用来做类型扩展的，扩展类不仅可以获得原来类的特性，还能扩展自己的特性
+
+
+
+## 4、子类和父类之间构造方法
 
 1.
 
@@ -76,7 +96,7 @@
 
 
 
-## 2、父子类中各个资源的初始化顺序 
+## 5、父子类中各个资源的初始化顺序 
 
  静态优先，然后是父类型优先
 
@@ -90,7 +110,7 @@
 ```
 
 
-## 3、子类和父类中调用方法的顺序
+## 6、子类和父类中调用方法的顺序
 
 ```java
 Super s=new Super();	//父类
@@ -105,13 +125,13 @@ Sub b=new Sub();		//子类
 
 
 
-## 4、多态
+## 7、多态
 
 - 多态
 
   > 简单地说就是：父类的引用指向了子类对象，接口的引用指向了其接口的实现类对象
   >
-  > - 一个行为，在不同条件下，有不同的执行效果
+  > - **一个行为，在不同条件下，有不同的执行效果**
   > - 在定义方法的时候，我们可以把参数类型定义的更为抽象一些，这样它就能接受所有的自类型实例，以此来提高程序的兼容性
   > - 表现：重写是父类与子类之间多态性的一种表现，重载是一类中多态性的表现
 
@@ -140,7 +160,7 @@ public static void draw(Super s){
 draw(new Sub); 
 ~~~
 
-2、在方法体中直接使用多态的语法格式
+2、父类型引用执行子类型
 
 ~~~java
 Super s=new Sub();
@@ -159,7 +179,7 @@ Super s=Super.draw();
 
 - 同一个类中进行方法重载
 
-  > 方法的重载：需参数不同、参数个数不同、返回值不同
+  > 方法的重载：需参数不同、参数个数不同
 
 ~~~java
 public void init(String name,int i){
@@ -183,7 +203,7 @@ public int init(){
 
 
 
-## 5、学生系统结构分析
+## 8、学生系统结构分析
 
 Main	--主函数入口
 
@@ -195,7 +215,7 @@ StudentContainer、Console	--控制台、数据容器：中层管理，提供特
 
 
 
-## 6、类型准换
+## 9、类型准换
 
 - 主要分为向上（自动）和向下转型（需要在变量前面加以类型修饰）
 
@@ -236,7 +256,7 @@ Super n=new Sub();
 
 
 
-## 7、如何比较对象
+## 10、如何比较对象
 
 - 如何比较对象
   - ==用来比较两者的地址(引用)，基本类型直接比较值
@@ -246,7 +266,7 @@ Super n=new Sub();
 
 
 
-## 8、static修饰符的使用	
+## 11、static修饰符的使用	
 
 - 修饰变量：static修饰的变量不依赖类的实例而存在，一般直接通过类名进行调用，它是这个类的实例所有共有的（它只有一份）
 
@@ -264,7 +284,7 @@ Super n=new Sub();
 
 
 
-## 9、final修饰符的使用
+## 12、final修饰符的使用
 
 - 被final修饰的变量，具有"不可改变"的特性，可以在构造器中进行第一次**赋值初始化**,**必须对每个构造器(无参和有参)里面进行同样的赋值操作**
 
@@ -284,7 +304,7 @@ Super n=new Sub();
 
 
 
-## 10、abstract修饰符的使用
+## 13、abstract修饰符的使用
 
 - 修饰类：对于abstract方法，只允许声明，不允许实现（没有方法体）
 
@@ -299,7 +319,7 @@ Super n=new Sub();
 
 
 
-## 11、final、static、abstract的共存
+## 14、final、static、abstract的共存
 
 - final、abstract 不能共存（无论在类、方法、属性、局部变量上都不能共存）
   - 原因1:修饰类：final类表示完美不需要继承重写，abstract类表示要子类继承。
@@ -310,7 +330,7 @@ Super n=new Sub();
 
 
 
-## 12、接口
+## 15、接口
 
 > 定义
 
@@ -336,7 +356,9 @@ Super n=new Sub();
 
 > 作用
 
-- 主要是为了解耦
+- **主要是为了解耦**
+
+即具体某一个类型和相应行为之间的关系
 
 ~~~java
 new User("Jack").eat();
@@ -353,7 +375,7 @@ void run(IEat eat)
 
 
 
-## 13、接口内默认修饰符
+## 16、接口内默认修饰符
 
 ```java
 public interface Wifi {
@@ -368,11 +390,11 @@ public interface Wifi {
 }
 ```
 
-- 子类重写父类方法时，方法的访问权限不能小于原访问权限，**在接口中，方法的默认权限就是public，所以子类重写后只能是public**
+- **子类重写父类方法时，方法的访问权限不能小于原访问权限，在接口中，方法的默认权限就是public，所以子类重写后只能是public**
 
 
 
-## 14、接口和抽象类的区别
+## 17、接口和抽象类的区别
 
 1、接口和抽象类的概念是不一样的。**接口是对动作的抽象，表示的是这个对象能做什么**，比如人可以吃东西、狗也可以吃东西，只要有相同的行为；**抽象类是对根源的抽象，表示的是这个对象是什么**，比如男人是人、女人也是人
 
@@ -384,7 +406,7 @@ public interface Wifi {
 
 
 
-## 15、抽象类实现接口，子类继承抽象类的关系
+## 18、抽象类实现接口，子类继承抽象类的关系
 
 - 一个类实现一个接口，则该类必须实现该接口中的所有方法
 - 一个抽象类实现一个接口，然后该**抽象类可以实现该接口中任意数量的方法**
@@ -393,7 +415,7 @@ public interface Wifi {
 
 
 
-## 16、重写equals和hashCode的原因
+## 19、重写equals和hashCode的原因
 
 - 没有重写hashCode方法，重写了equals，那么对象调用hashCode方法是根据对象的地址值来生成的哈希值,两个对象内容一定相同,哈希值不一定不同
 
@@ -410,7 +432,7 @@ public interface Wifi {
 
 
 
-## 17、ArrayList与LinkedList
+## 20、ArrayList与LinkedList
 
 - ArrayList
   - 基于数组实现的，具备了数组所有的优点
@@ -929,7 +951,7 @@ public class DoubleLinkedListDemo {
 
 
 
-## 18、HashMap和HaspSet
+## 21、HashMap和HaspSet
 
 - Map
   - 基于键值对(key-value)的数据结构
@@ -1036,29 +1058,35 @@ public class DoubleLinkedListDemo {
 
 
 
-## 19、Java权限修饰符有哪些？有何区别？
+## 22、Java权限修饰符有哪些？有何区别？
 
 ![image-20220723140053658](images/image-20220723140053658.png)
 
 
 
-## 20、重载与重写的区别
+## 23、重载与重写的区别
 
 1、定义不同：重载是定义相同的方法名、参数不同，重写是子类重写父类的方法
+
 2、范围不同：重载是在一个类中，重写是子类与父类之间的
+
 3、多态不同：重载是编译时的多态性，重写是运行时的多态性
+
 4、参数不同：重载的参数个数、参数类型、参数的顺序可以不同，重写父类子方法参数必须相同
+
 5、修饰不同：重载对修饰范围没有要求，重写要求重写方法的修饰范围大于被重写方法的修饰范围
 
+6、重写的子类返回值类型、参数类型、异常范围要小于等于父类的
 
 
-## 21、开闭原则
+
+## 24、开闭原则
 
 软件中的对象（类、函数、模块等）应该扩展开放，对修改关闭
 
 
 
-## 22、垃圾回收机制
+## 25、垃圾回收机制
 
  回收不可达的对象，程序员不能强制执行，只能System.gc 方法来“建议”执行
 
@@ -1588,6 +1616,8 @@ RuntimeException
 ~~~
 
 #### 2.2.4 throws方法声明异常
+
+声明该方法有可能会抛出某种类型的异常
 
 将当前方法中的异常交给调用者处理**：throws** Exception
 
@@ -2855,7 +2885,7 @@ ArrayList由于本身没有进行同步化（synchronize），因此我们可以
 
 Vector线程安全，但是太老了
 
-因此有了CopyOnWriteArrayList
+因此有了CopyOnWriteArrayList,用的显示锁， ReentrantLock
 
 ~~~java
 public class Demo {
